--- a/.github/workflows/sit722-cd-production.yml
+++ b/.github/workflows/sit722-cd-production.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Frontend tests
         working-directory: frontend
         run: |
-          npm ci
+          npm install
           npm test -- --ci
 
       - uses: actions/setup-java@v4
