--- a/.github/workflows/sit722-cd-staging.yml
+++ b/.github/workflows/sit722-cd-staging.yml
@@ -58,8 +58,9 @@ jobs:
         run: |
           NS=${{ steps.ns.outputs.ns }}
           kubectl apply -f rendered/
-          kubectl -n $NS rollout status deploy/product --timeout=180s
-          kubectl -n $NS rollout status deploy/order   --timeout=180s
+          kubectl -n $NS rollout status deploy/product  --timeout=180s
+          kubectl -n $NS rollout status deploy/order    --timeout=180s
+          kubectl -n $NS rollout status deploy/customer --timeout=180s
           kubectl -n $NS rollout status deploy/frontend --timeout=180s
 
       - name: Show service IPs
@@ -71,35 +72,6 @@ jobs:
       - name: Smoke tests
         run: |
           NS=${{ steps.ns.outputs.ns }}
-          FIP=$(kubectl -n $NS get svc frontend -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-          PIP=$(kubectl -n $NS get svc product  -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-          OIP=$(kubectl -n $NS get svc order    -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
-          for url in "http://$FIP/" "http://$PIP/health" "http://$OIP/health"; do
-            echo "Testing $url"
-            for i in {1..10}; do
-              if curl -fsS "$url" >/dev/null; then echo "OK: $url"; break; fi
-              sleep 5
-            done
-          done
-
-  destroy_staging:
-    needs: deploy_staging
-    if: always()
-    runs-on: ubuntu-latest
-    steps:
-      - name: Azure login
-        uses: azure/login@v2
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Set AKS context
-        uses: azure/aks-set-context@v4
-        with:
-          resource-group: ${{ secrets.AKS_RESOURCE_GROUP }}
-          cluster-name:  ${{ secrets.AKS_CLUSTER_NAME }}
-
-      - name: Delete ephemeral namespace
-        run: |
-          NS=stg-${{ github.run_id }}-${{ github.run_attempt }}
-          NS=$(echo $NS | cut -c1-30)
-          kubectl delete namespace $NS --ignore-not-found=true
+          FIP=$(kubectl -n $NS get svc frontend  -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          PIP=$(kubectl -n $NS get svc product   -o jsonpath='{.status.loadBalancer.ingress[0].ip}')
+          OIP=$(kubectl -n $NS get svc order     -o jsonpath='{.s
